# Narcissus-app

./: App  App.cpp  CMakeLists.txt  README.md
src/classes/: classifiedOpsSystem.hpp  typeOfCrime.hpp
src/components/: TypeOfCrime.cpp  functions.cpp  functions.hpp
src/constants/: colors.hpp  fontWeight.cpp  fontWeight.hpp  logo.cpp  logo.hpp
src/data/: data.hpp
src/helpers/: ClearScreen.cpp  ClearScreen.hpp  IDGenerator.hpp
src/screens/: loginScreen.cpp  menuScreen.cpp
